[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Ulf Dellbrügge <xintamosaik@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/xintamosaik/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"